# MatrixScreen

./: .gitmodules  CMakeLists.txt  README.md
components/ccs811/: CMakeLists.txt  Kconfig.projbuild  ccs811.c
components/ccs811/include/: ccs811.h
components/fast_led/: CMakeLists.txt
components/gpio_module/: CMakeLists.txt  Kconfig.projbuild  gpio_module.c
components/gpio_module/include/: gpio_module.h
components/hdc1080/: .CMakeLists.txt.swp  CMakeLists.txt  hdc1080.c
components/hdc1080/include/: hdc1080.h
components/i2c_module/: CMakeLists.txt  Kconfig.projbuild  i2c_module.c
components/i2c_module/include/: i2c_module.h
components/mqtt/: CMakeLists.txt  mqtt.c
components/sensor/HDC1080/: CMakeLists.txt  HDC1080.c
components/sensor/HDC1080/include/: HDC1080.h
components/smartconfig/: .CMakeLists.txt.swp  CMakeLists.txt  smartconfig.c
components/smartconfig/include/: smartconfig.h
main/: CMakeLists.txt  MatrixScreen.c  MatrixScreen.cpp
