idf_component_register(
    SRCS 
    SRC_DIRS
    "FastLED/src/" 
    INCLUDE_DIRS 
    "FastLED/src" 
    "FastLED/src/platforms/esp/32"
    REQUIRES arduino
    )


#    "FastLED/src/bitswap.cpp" 
#    "FastLED/src/colorpalettes.cpp" 
#    "FastLED/src/colorutils.cpp" 
#    "FastLED/src/FastLED.cpp" 
#    "FastLED/src/lib8tion.cpp" 
#    "FastLED/src/noise.cpp" 
#    "FastLED/src/platforms.cpp" 
#    "FastLED/src/power_mgt.cpp" 
#    "FastLED/src/wiring.cpp" 
#    "FastLED/src/hsv2rgb.cpp" 

#"arduino-esp32/cores/esp32"
#"arduino-esp32/cores/esp32"
#   "arduino-esp32/variants/esp32"
